started building out homepage

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <!-- Our custom stylesheet -->
   <link href="/Assets/webfonts/fontawesome-all.css" rel="stylesheet">
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 
   <!-- Icons -->
   <link href="/img/insightLogo.png" rel="shortcut icon">
