--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,32 +1,24 @@
 <div class = "menu">
 
-	<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/img/logoWhiteMedium.png" id="mobileMenuLogo"></a>
-
 		<div class = "linkWrap">
 
 			<ul class="linkList">
 
 				<li>
 
-					<a href = "{{ site.baseurl }}" class="menuLink">HOME</a>
+					<a href = "{{ site.baseurl }}" class="menuLink">Home</a>
 
 				</li>
 
 				<li>
 
-					<a href = "{{ site.baseurl }}/about/" class="menuLink">ABOUT</a>
+					<a href = "{{ site.baseurl }}/services/" class="menuLink">Services</a>
 
 				</li>
 
 				<li>
 
-					<a href = "{{ site.baseurl }}/projects/" class="menuLink">PROJECTS</a>
-
-				</li>
-
-				<li>
-
-					<a href = "{{ site.baseurl }}/contact/" class="menuLink">CONTACT US</a>
+					<a href = "{{ site.baseurl }}/contact/" class="menuLink">Contact</a>
 
 				</li>
 
@@ -38,7 +30,7 @@
 
 			<svg xmlns = "http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id ="Layer_1" x="0px" y="0px" width="20px" height = "20px" viewBox = "0 0 20 20" xml:space="preserve" class="svg-raw replaced-svg">
 
-				<path fill = "#0080c5" d="M18.19,19.771l-8.153-8.152l-8.152,8.153l-1.603-1.604l8.152-8.152L0.281,1.862L1.886,0.26l8.152,8.152  l8.154-8.153l1.602,1.604l-8.152,8.153l8.153,8.154L18.19,19.771z">
+				<path fill = "#894380" d="M18.19,19.771l-8.153-8.152l-8.152,8.153l-1.603-1.604l8.152-8.152L0.281,1.862L1.886,0.26l8.152,8.152  l8.154-8.153l1.602,1.604l-8.152,8.153l8.153,8.154L18.19,19.771z">
 
 				</path>
 
@@ -58,7 +50,7 @@
 
 				<i class="fas fa-phone whiteIcon"></i>
 
-				<a href="tel:(920)903-1043" class="secondaryLink">(920)903-1043</a>
+				<a href="tel:(608)524-0505" class="secondaryLink">(608)524-0505</a>
 
 			</div>
 
@@ -70,31 +62,23 @@
 
 				<div class="pageWidth menuLinkWrap">
 
-						<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/img/logoWhiteMedium.png" class="siteLogo" ></a>
-
 						<ul class="linkList2">
 
 							<li>
 
-								<a href = "{{ site.baseurl }}/" class="menuLink">HOME</a>
+								<a href = "{{ site.baseurl }}/" class="menuLink">Home</a>
 
 							</li>
 
 							<li>
 
-								<a href = "{{ site.baseurl }}/about/" class="menuLink">ABOUT</a>
+								<a href = "{{ site.baseurl }}/services/" class="menuLink">Services</a>
 
 							</li>
 
 							<li>
 
-								<a href = "{{ site.baseurl }}/projects/" class="menuLink">PROJECTS</a>
-
-							</li>
-
-							<li>
-
-								<a href = "{{ site.baseurl }}/contact/" class="primaryButton">CONTACT US</a>
+								<a href = "{{ site.baseurl }}/contact/" class="menuLink">Contact</a>
 
 							</li>
 
