--- a/css/main.css
+++ b/css/main.css
@@ -277,7 +277,7 @@ Template: Insight-Responsive
   background: #F6F6F6; }
 
 .blackBlock {
-  background: #232323; }
+  background: #000000; }
 
 .page-content {
   position: relative;
@@ -304,7 +304,7 @@ Template: Insight-Responsive
   height: 80px;
   width: 100%;
   margin: 0 auto;
-  background: #FFFFFF;
+  background: #000000;
   display: flex;
   align-items: center;
   box-shadow: 0 10px 20px rgba(42, 42, 42, 0.2); }
@@ -316,13 +316,13 @@ Template: Insight-Responsive
   height: 40px;
   margin: 0 auto;
   width: 100%;
-  background: #0080c5;
+  background: #894380;
   display: flex;
   align-items: center; }
 
 .menuLinkWrap {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center; }
 
 .secondaryMenuWrap {
@@ -376,7 +376,7 @@ nav {
   cursor: pointer;
   font-size: 26px;
   padding-right: 10px;
-  color: #0080c5;
+  color: #894380;
   text-decoration: none;
   transition: .3s ease-out all; }
 
@@ -393,7 +393,7 @@ nav {
   .menuBars span {
     display: block;
     position: relative;
-    background-color: #0080c5;
+    background-color: #894380;
     height: 3px;
     width: 100%;
     margin-top: 4px; }
@@ -431,7 +431,7 @@ nav {
       padding: 0;
       margin: 0; }
       .linkWrap a {
-        color: #0080c5;
+        color: #894380;
         text-decoration: none; }
       .linkWrap li {
         list-style-type: none;
@@ -452,7 +452,7 @@ nav {
       padding: 0;
       margin: 0; }
       .linkWrap a {
-        color: #0080c5;
+        color: #894380;
         text-decoration: none; }
       .linkWrap li {
         list-style-type: none;
@@ -471,6 +471,7 @@ nav {
   position: relative;
   display: block;
   padding: 10px 20px 10px 20px;
+  margin: 0 50px 0 50px;
   transition: .2s ease all;
   color: #FFFFFF; }
 
@@ -482,7 +483,7 @@ nav {
   width: 100%;
   opacity: 0;
   height: 3px;
-  background: #0080c5;
+  background: #894380;
   transition: .3s ease all; }
 .menuLink:hover:after {
   position: absolute;
@@ -492,18 +493,18 @@ nav {
   opacity: 1;
   width: 100%;
   height: 3px;
-  background: #0080c5;
+  background: #894380;
   transition: .3s ease all; }
 
 .menu .active a {
-  border-bottom: 2px solid #0080c5 !important;
+  border-bottom: 2px solid #894380 !important;
   color: #FFFFFF;
   width: 100%;
   text-align: initial; }
 
 .linkList2 .active a {
   margin-bottom: -1px;
-  border-bottom: 3px solid #0080c5 !important;
+  border-bottom: 3px solid #894380 !important;
   transition: .2s ease all; }
 
 .closeMenu {
@@ -531,7 +532,7 @@ nav {
       font-size: 20px;
       font-weight: 600; } }
   .linkList2 a {
-    color: #0080c5;
+    color: #894380;
     text-decoration: none;
     transition: .3s ease all; }
   .linkList2:hover {
@@ -592,7 +593,7 @@ nav {
     .heroNavLink {
       color: #3598db; } }
   .heroNavLink:hover {
-    color: #0080c5;
+    color: #894380;
     transition: .3s ease all; }
 
 .mobileHeroNav {
@@ -631,7 +632,7 @@ nav {
   z-index: 2;
   background-color: #FFFFFF;
   width: 100%;
-  color: #232323;
+  color: #000000;
   padding: 0 0 50px 0;
   margin: 0 auto; }
 
@@ -657,7 +658,7 @@ nav {
   align-items: center; }
   .footerContact a {
     text-decoration: none;
-    color: #0080c5;
+    color: #894380;
     transition: .3s ease all; }
     .footerContact a:hover {
       color: #004e79;
@@ -687,7 +688,7 @@ nav {
 
 .footerLink {
   position: relative;
-  color: #0080c5;
+  color: #894380;
   text-decoration: none;
   padding: 10px 20px 10px 20px;
   margin: 10px 0 10px 0;
@@ -697,7 +698,7 @@ nav {
     position: absolute;
     height: 0;
     width: 3px;
-    background: #0080c5;
+    background: #894380;
     content: "";
     transition: .3s ease all;
     bottom: 12px;
@@ -732,7 +733,7 @@ nav {
       justify-content: left; } }
 
 #copyright {
-  background: #0080c5;
+  background: #894380;
   color: #FFFFFF;
   margin-bottom: -50px;
   font-size: 16px;
@@ -828,11 +829,11 @@ optgroup,
 textarea {
   color: #020101;
   font-family: 'Open Sans', sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   line-height: 1.5; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.2em;
   font-weight: 700; }
 
@@ -862,7 +863,7 @@ h6 {
   text-shadow: 0 2px 2px black; }
 
 .primaryText {
-  color: #0080c5;
+  color: #894380;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4); }
 
 .centerText {
@@ -872,7 +873,7 @@ h6 {
   position: relative; }
   .underlinedHeading:after {
     position: absolute;
-    background: #0080c5;
+    background: #894380;
     height: 2px;
     width: 200px;
     content: "";
@@ -881,7 +882,7 @@ h6 {
 
 /* 7.0 Button Stylings ---------------------------------------*/
 .redLink {
-  color: #0080c5 !important;
+  color: #894380 !important;
   transition: .3s ease all; }
   .redLink:hover {
     transition: .3s ease all;
@@ -890,9 +891,9 @@ h6 {
 .primaryButton {
   position: relative;
   z-index: 1;
-  border: 2px solid #0080c5;
+  border: 2px solid #894380;
   border-radius: 30px;
-  background: #0080c5;
+  background: #894380;
   padding: 10px 50px 10px 50px;
   color: #FFFFFF !important;
   text-shadow: 0 1px 1px black;
@@ -903,28 +904,28 @@ h6 {
   .primaryButton:hover {
     background: rgba(0, 0, 0, 0) !important;
     transition: .3s ease all;
-    color: #0080c5 !important; }
+    color: #894380 !important; }
 
 .primaryButtonReverse {
   position: relative;
   z-index: 1;
-  border: 2px solid #0080c5;
+  border: 2px solid #894380;
   border-radius: 30px;
   padding: 10px 50px 10px 50px;
-  color: #0080c5;
+  color: #894380;
   margin-bottom: 10px;
   transition: .3s ease all;
   cursor: pointer; }
   .primaryButtonReverse:hover {
-    background: #0080c5;
+    background: #894380;
     transition: .3s ease all;
     color: #FFFFFF; }
 
 .plainRedButton {
   position: relative;
   z-index: 1;
-  border: 2px solid #0080c5;
-  background: #0080c5;
+  border: 2px solid #894380;
+  background: #894380;
   padding: 10px 50px 10px 50px;
   color: #FFFFFF;
   margin-bottom: 10px;
@@ -935,16 +936,14 @@ h6 {
   position: relative;
   z-index: 1;
   border: 2px solid #FFFFFF;
-  border-radius: 30px;
-  background: #FFFFFF;
-  padding: 10px 50px 10px 50px;
-  color: #0080c5;
+  background: rgba(0, 0, 0, 0);
+  padding: 10px 100px 10px 100px;
+  color: #894380;
   transition: .3s ease all;
   cursor: pointer;
   box-shadow: 1px 2px 10px rgba(42, 42, 42, 0.6); }
   .whiteButton:hover {
-    background: rgba(0, 0, 0, 0);
-    color: #FFFFFF;
+    background: #FFFFFF;
     transition: .3s ease all; }
 
 .centerButton {
@@ -964,14 +963,14 @@ body {
   margin: 0; }
 
 ::selection {
-  background: rgba(0, 128, 197, 0.5); }
+  background: rgba(137, 67, 128, 0.6); }
 
 ::-moz-selection {
-  background: rgba(0, 128, 197, 0.5); }
+  background: rgba(137, 67, 128, 0.6); }
 
 .plainLink {
   text-decoration: none;
-  color: #0080c5;
+  color: #894380;
   transition: .3s ease all; }
   .plainLink:hover {
     color: #004e79;
@@ -986,7 +985,7 @@ body {
   color: #F6F6F6; }
 
 .primaryIcon {
-  color: #0080c5; }
+  color: #894380; }
 
 .iconBlock {
   display: flex;
@@ -1074,7 +1073,7 @@ body {
       padding: 50px; } }
 
 #homeHeroNav {
-  background: #0080c5;
+  background: #894380;
   padding: 20px 0 20px 0;
   font-size: 26px;
   font-weight: 600; }
@@ -1129,36 +1128,15 @@ body {
     transition: opacity;
     transition: .3s ease all; }
   .serviceImage:hover h3 {
-    color: #0080c5;
+    color: #894380;
     transition: .3s ease all; }
 
-.logoWrap {
-  padding: 20px; }
+#hoursWrap {
+  display: flex;
+  justify-content: center; }
 
-.certLogo {
-  height: 120px;
-  width: auto; }
-  @media (max-width: 600px) {
-    .certLogo {
-      height: 100px; } }
-  @media (min-width: 600px) {
-    .certLogo {
-      height: 100px; } }
-  @media (min-width: 992px) {
-    .certLogo {
-      height: 50px; } }
-  @media (min-width: 1250px) {
-    .certLogo {
-      height: 120px; } }
-
-#testimonials {
-  background-color: #232323;
-  background-image: url("../img/maze-black.png");
-  background-position: center center;
-  height: 400px; }
-
-#homeButtonIcon {
-  margin-left: 20px; }
+.hours {
+  margin: 0 50px 0 50px; }
 
 .introWrap {
   padding: 50px 20px 50px 20px; }
@@ -1257,7 +1235,7 @@ body {
   transition: opacity;
   opacity: 0;
   transition: .3s ease all;
-  border: 2px solid #0080c5;
+  border: 2px solid #894380;
   transform: translateZ(50px); }
 
 #lrgFeaturedWorkImage {
@@ -1367,7 +1345,7 @@ body {
     box-shadow: 2px 2px 10px rgba(42, 42, 42, 0.4); }
   #primaryContact :focus {
     outline: none;
-    border-bottom: 2px solid #0080c5;
+    border-bottom: 2px solid #894380;
     transition: .3s ease all; }
   #primaryContact input[type="submit"] {
     margin-top: 10px;
@@ -1379,13 +1357,13 @@ body {
   height: 32px;
   margin-left: 10px;
   cursor: pointer;
-  background-color: rgba(0, 128, 197, 0.8);
+  background-color: rgba(137, 67, 128, 0.8);
   background-image: url("../img/contact/cd-icon-controller.svg");
   background-repeat: no-repeat;
   background-size: 32px 64px; }
   #cd-zoom-in:hover,
   #cd-zoom-out:hover {
-    background-color: #0080c5; }
+    background-color: #894380; }
 
 #cd-zoom-in {
   margin-top: 10px;
