--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -7,11 +7,11 @@ optgroup,
 textarea {
 	color: #020101;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 22px;
+	font-size: 20px;
 	line-height: 1.5;
 }
 h1,h2,h3,h4,h5,h6{
-	font-family: 'Merriweather Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	line-height: 1.2em;
 	font-weight: 700;
 }
