--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,9 +1,9 @@
 /* 1.0 sitewide variables -------------------------------------------*/
-$primaryColor: #0080c5;
+$primaryColor: #894380;
 //$secondaryColor: #1D1D1D;
 $secondaryColor: #004e79;
 //$black: #020101;
-$black: #232323;
+$black: #000000;
 $white: #FFFFFF;
 $transparent: rgba(0,0,0,0);
 $lightGrey: #F6F6F6;
