--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -15,6 +15,6 @@ Version: 1.0.1
 @import '_general';
 @import '_icons';
 @import '_home';
-@import '_about';
+@import '_services';
 @import '_privacyPolicy';
 @import '_contact';
