--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,15 +17,9 @@
 
     </div>
 
-    <!-- jQuery and Bootstrap -->
+    <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-    <!-- Vanilla tilt -->
-    <script type="text/javascript" src="{{ site.baseurl }}/js/vanilla-tilt-min.js"></script>
-
-    <!-- Holder.js for placeholder images -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.4.1/holder.js"></script>
     {% include footer.html %}
   </body>
 </html>
