--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -18,7 +18,8 @@
 .site-footer{
 	position: relative;
 	z-index: 2;
-	background-color: $black;
+	background: rgb(35,35,35);
+	background: radial-gradient(circle, rgba(35,35,35,1) 30%, rgba(0,0,0,1) 100%);
 	width: 100%;
 	color: $white;
 	padding: 0 0 50px 0;
