--- a/_scss/_home.scss
+++ b/_scss/_home.scss
@@ -71,47 +71,18 @@
       padding: 50px;
     }
 }
-.serviceImage{
-  width: 100%;
-	height: 100%;
-	padding: 0;
-	margin: 0 auto;
-    @include breakpoint(smallScreen){
-			width: 100%;
-      margin: 20px 0 20px 0;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 100%;
-    	height: 100%;
-    }
-    @include breakpoint(laptopScreen){
-      width: 100%;
-      height: 100%;
-      padding: 20px;
-    }
-      a{
-        text-decoration: none;
-      }
-      &:hover{
-        .featureOverlay{
-          opacity: 1;
-          transition: opacity;
-          transition: .3s ease all;
-        }
-        .borderedOverlay{
-          opacity: 1;
-          transition: opacity;
-          transition: .3s ease all;
-        }
-        h3{
-          color: $primaryColor;
-          transition: .3s ease all;
-        }
-      }
-}
 #hoursWrap{
 	display:flex;
 	justify-content: center;
+		@include breakpoint(smallScreen){
+			flex-direction: column;
+		}
+		@include breakpoint(largeMobileScreen){
+			flex-direction: column;
+		}
+		@include breakpoint(laptopScreen){
+			flex-direction: row;
+		}
 }
 .hours{
 	padding: 0 20px 0 20px;
@@ -142,157 +113,4 @@
 	max-width: 300px;
 	max-height: 400px;
 	margin: 10px;
-}
-.introText{
-	padding: 200px 20px 50px 20px;
-	width: 60%;
-	margin:0 auto;
-}
-#workButton{
-	margin-top: 50px;
-}
-.spacer{
-	margin-top: 100px;
-}
-#serviceDesc{
-	padding-bottom: 50px;
-}
-.overlayWrap{
-	position: relative;
-	transform-style: preserve-3d;
-    &:before{
-      background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0,0,0,0.5)), to(rgba(255,255,255,0)));
-      background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(255,255,255,0));
-    	position: absolute;
-      top: 0;
-      left: 0;
-      content: "";
-      width: 100%;
-      height: 100%;
-    }
-		&:after{
-			position: absolute;
-      top: 0;
-      left: 0;
-      content: "";
-      width: 100%;
-      height: 100%;
-			background-color: #333;
-    	box-shadow: 10px 10px 20px rgba(51, 51, 51, 0.7), 0 20px 50px 0 rgba(51, 51, 51, 0.2);
-			-webkit-transform: translateZ(-20px);
-    	transform: translateZ(-20px);
-    	z-index: -1;
-		}
-}
-.serviceTitle{
-	position: absolute;
-	width: 100%;
-	top: 20%;
-	text-align: center;
-	text-shadow: 2px 2px 2px rgba(0,0,0,1);
-	color: $white;
-	z-index: 3;
-	transform: translateZ(100px);
-    @include breakpoint(smallScreen){
-      top: 10%;
-    }
-}
-.title{
-	padding: 50px 50px 10px 50px;
-	transition: .2s ease all;
-    @include breakpoint(tinyScreen){
-      padding: 10px 30px 10px 30px;
-    }
-}
-.desc{
-	padding: 10px 50px 50px 50px;
-    @include breakpoint(tinyScreen){
-      padding: 10px 30px 10px 30px;
-    }
-    @include breakpoint(largeScreen){
-      padding: 10px 70px 50px 70px;
-    }
-}
-.featureOverlay{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 2;
-	height: 100%;
-	width: 100%;
-	background: rgba(0, 0, 0, .5);
-	transition: opacity;
-	opacity: 0;
-	transition: .3s ease all;
-}
-.borderedOverlay{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: absolute;
-	z-index: 2;
-	height: 80%;
-	width: 80%;
-	transition: opacity;
-	opacity: 0;
-	transition: .3s ease all;
-	border: 2px solid $primaryColor;
-	transform: translateZ(50px);
-}
-#lrgFeaturedWorkImage{
-	text-align: center;
-	display: flex;
-	align-items: center;
-}
-.workWrap{
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	width: 90%;
-	margin: 0 auto;
-}
-#services a{
-	text-decoration: none;
-}
-.CTAcontent{
-	width: 60%;
-    @include breakpoint(smallScreen){
-      width: 90%;
-		  margin: 0 auto;
-		  text-align: center;
-		  padding: 20px;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 90%;
-		  margin: 0 auto;
-		  text-align: center;
-		  padding: 20px;
-    }
-}
-.siteCTAWrap{
-	position: relative;
-	background-image: url("../img/designBuild3Cropped.jpg");
-	background-size: cover;
-	background-position: center center;
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 500px;
-    a{
-      text-decoration: none;
-    }
-}
-.CTAoverlay{
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 500px;
-	width: 100%;
-	background: rgba(0, 128, 197,.7);
-	z-index: 5;
-	content: "";
-	display:flex;
-	align-items:center;
 }
