fixed copy on homepage

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
 
 				<li>
 
-					<a href = "{{ site.baseurl }}" class="menuLink">Home</a>
+					<a href = "{{ site.baseurl }}/" class="menuLink">Home</a>
 
 				</li>
 
