--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,4 +60,14 @@
 
   <script src="{{ site.baseurl }}/js/main.js" type="text/javascript"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110381369-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-110381369-1');
+  </script>
+
 </footer>
