removed font awesome and replaced the three icons the site runs with fontello to trim extra weight

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
 
         <a href="tel:(608)524-0505" class="plainLink centerText"><h4>(608)524-0505</h4></a>
 
-        <a href="https://www.facebook.com/AlanasRunninWithScizzorsLLC/" target="_blank"><i class ="whiteIcon fab fa-facebook-square"></i></a>
+        <a href="https://www.facebook.com/AlanasRunninWithScizzorsLLC/" target="_blank"><i class ="whiteIcon fab icon-facebook-squared" id="facebookIcon"></i></a>
 
       </div>
 
@@ -26,7 +26,7 @@
 
           <div id="copyrightWrap">
 
-            <i class="whiteIcon far fa-copyright"></i><p>&nbsp;<script>document.write(new Date().getFullYear());</script> Runnin With Scizzors</p>
+            <i class="whiteIcon icon-copyright" id="copyrightIcon"></i><p>&nbsp;<script>document.write(new Date().getFullYear());</script> Runnin With Scizzors</p>
 
           </div>
 
