--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,11 +9,16 @@
 
   <title>{% if page.title %}{{ page.title}} | {% endif %}{{ site.title }}</title>
 
-  <!-- CSS (Bootstrap is loaded via a content delivery network) -->
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
-  <link rel="stylesheet" href="/css/main.css">
   <!-- Our custom stylesheet -->
-  <link href="/Assets/webfonts/fontawesome-all.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/main.css">
+
+  <!-- Load Font Awesome stylesheet -->
+  <!-- Remove Font Awesome and load a lightweight fontello instead-->
+  <!--<link href="/Assets/webfonts/fontawesome-all.css" rel="stylesheet">-->
+
+  <!-- Load Font Awesome stylesheet -->
+  <link href="/assets/webfontsNew/fonts/css/fontello.css" rel="stylesheet">
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 
