--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -48,7 +48,7 @@
 
 			<div class="pageWidth secondaryMenuWrap">
 
-				<i class="fas fa-phone whiteIcon"></i>
+				<i class="icon-phone fas fa-phone whiteIcon" id="phoneIcon"></i>
 
 				<a href="tel:(608)524-0505" class="secondaryLink">(608)524-0505</a>
 
