--- a/_scss/_icons.scss
+++ b/_scss/_icons.scss
@@ -13,3 +13,12 @@
 	display: flex;
 	flex-direction: column;
 }
+#phoneIcon{
+	font-size: 24px;
+}
+#copyrightIcon{
+	font-size: 16px;
+}
+#facebookIcon{
+	font-size: 30px;
+}
