--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -55,8 +55,9 @@
     </div>
 
 	<!--  Script for barba.js  -->
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js" type="text/javascript"></script>-->
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js" type="text/javascript"></script>
+  <!--<script src="{{ site.baseurl }}/js/barba.js" type="text/javascript"></script>-->
 
   <script src="{{ site.baseurl }}/js/main.js" type="text/javascript"></script>
 
