--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
 
             <a href="{{ site.baseurl }}/privacy-policy/" class="borderRight" id="privacyLink">Privacy Policy</a>
 
-            <a href="{{ site.baseurl }}/contact/" id="contactLink" >Contact Us</a>
+            <a href="{{ site.baseurl }}/contact/" id="contactLink" >Contact</a>
 
           </div>
 
@@ -59,7 +59,7 @@
 
   <!--<script src="{{ site.baseurl }}/js/barba.js" type="text/javascript"></script>-->
 
-  <script src="{{ site.baseurl }}/js/main.js" type="text/javascript"></script>
+  <script src="{{ site.baseurl }}/js/main-min.js" type="text/javascript"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110381369-1"></script>
